--- a/cloudpilot-ionic/src/app/component/session-settings/session-settings.component.scss
+++ b/cloudpilot-ionic/src/app/component/session-settings/session-settings.component.scss
@@ -1,4 +1,13 @@
 ion-item {
     --highlight-color-valid: var(--highlight-color-focused);
+    --background: none;
 }
 
+.label-speed {
+    min-width: 7rem;
+}
+
+h1 {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
