--- a/cloudpilot-ionic/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/cloudpilot-ionic/src/app/page/emulation/context-menu/context-menu.component.html
@@ -24,7 +24,7 @@
     <ion-icon name="share-outline" slot="end"></ion-icon>
   </ion-item>
   <ion-item button [detail]="false" (click)="editSettings()">
-    <ion-label>Session settings</ion-label>
+    <ion-label>Settings</ion-label>
     <ion-icon name="cog-outline" slot="end"></ion-icon>
   </ion-item>
   <ion-item button [detail]="false" (click)="help()">
