--- a/cloudpilot-ionic/src/app/component/session-settings/session-settings.component.html
+++ b/cloudpilot-ionic/src/app/component/session-settings/session-settings.component.html
@@ -32,6 +32,14 @@
         </ion-item>
 
         <ion-item lines="none">
+            <ion-label position="stacked">Orientation</ion-label>
+            <ion-select formControlName="orientation">
+                <ion-select-option *ngFor="let orientation of orientations" [value]="orientation[0]">{{orientation[1]}}
+                </ion-select-option>
+            </ion-select>
+        </ion-item>
+
+        <ion-item lines="none">
             <ion-label class="label-speed">{{speedLabel}}</ion-label>
             <ion-range min="-4" max="4" step="0.25" snaps="true" ticks="false" formControlName="speed">
             </ion-range>
