--- a/cloudpilot-ionic/src/app/page/settings/settings.page.html
+++ b/cloudpilot-ionic/src/app/page/settings/settings.page.html
@@ -29,6 +29,11 @@
       </ion-item>
 
       <ion-item lines="none">
+        <ion-label>Enable audio on start</ion-label>
+        <ion-toggle formControlName="audioOnStart"></ion-toggle>
+      </ion-item>
+
+      <ion-item lines="none">
         <ion-label>Run when hidden</ion-label>
         <ion-toggle formControlName="runHidden"></ion-toggle>
       </ion-item>
