Bootstrap storage page.

--- a/web/pwa/src/app/tabs/tabs.page.html
+++ b/web/pwa/src/app/tabs/tabs.page.html
@@ -13,6 +13,11 @@
         <ion-label>Sessions</ion-label>
       </ion-tab-button>
 
+      <ion-tab-button tab="storage">
+        <ion-icon name="folder-outline"></ion-icon>
+        <ion-label>Storage</ion-label>
+      </ion-tab-button>
+
       <ion-tab-button tab="settings">
         <ion-icon name="cog-outline"></ion-icon>
         <ion-label>Settings</ion-label>
