Visual fixes for iOS.

--- a/web/pwa/src/app/page/emulation/emulation.page.html
+++ b/web/pwa/src/app/page/emulation/emulation.page.html
@@ -31,7 +31,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [class.locked]="navigation.isLocked()">
 
   <div class="container running-session"
     [style.display]="(emulationState.getCurrentSession() && !emulationState.getCurrentSession()?.wasResetForcefully) ? undefined : 'none'"
