--- a/web/pwa/src/app/page/emulation/emulation.page.scss
+++ b/web/pwa/src/app/page/emulation/emulation.page.scss
@@ -29,6 +29,10 @@ ion-title {
         width: 100%;
         max-width: 20em;
     }
+
+    ion-content.locked & {
+        padding-bottom: env(safe-area-inset-bottom);
+    }
 }
 
 .container.running-session {
