More iOS safe area fixes.

--- a/web/pwa/src/app/page/emulation/emulation.page.scss
+++ b/web/pwa/src/app/page/emulation/emulation.page.scss
@@ -31,7 +31,7 @@ ion-title {
     }
 
     ion-content.locked & {
-        padding-bottom: env(safe-area-inset-bottom);
+        padding-bottom: var(--ion-safe-area-bottom, 0);
     }
 }
 
