--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -37,3 +37,22 @@
 .alert-checkbox-no-border .alert-checkbox-group {
     border: none !important;
 }
+
+ion-item::part(native), ion-item-option {
+    --ion-safe-area-left: 0;
+    --ion-safe-area-right: 0;
+}
+
+ion-modal {
+    padding-left: var(--ion-safe-area-left, 0);
+    padding-right: var(--ion-safe-area-right, 0);
+    padding-bottom: var(--ion-safe-area-bottom, 0);
+}
+
+@media only screen and (min-width: 768px) and (min-height: 600px) {
+    ion-modal {
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 0;
+    }
+}
