--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -39,14 +39,14 @@
 }
 
 ion-item::part(native), ion-item-option {
-    --ion-safe-area-left: 0;
-    --ion-safe-area-right: 0;
+    --ion-safe-area-left: 0px;
+    --ion-safe-area-right: 0px;
 }
 
 ion-modal {
-    padding-left: var(--ion-safe-area-left, 0);
-    padding-right: var(--ion-safe-area-right, 0);
-    padding-bottom: var(--ion-safe-area-bottom, 0);
+    padding-left: var(--ion-safe-area-left, 0px);
+    padding-right: var(--ion-safe-area-right, 0px);
+    padding-bottom: var(--ion-safe-area-bottom, 0px);
 }
 
 @media only screen and (min-width: 768px) and (min-height: 600px) {
