--- a/web/pwa/src/app/page/storage/storage.page.html
+++ b/web/pwa/src/app/page/storage/storage.page.html
@@ -35,11 +35,8 @@
 
   <div *ngIf="!storageCardService.isLoading() && cards.length === 0" class="placeholder-container">
     <div class="placeholder">
-      No storage. Select the &bdquo;+&ldquo; icon in the upper right corner in order to create a
-      new card image, or select the upload icon to import an existing on.
-      <br><br>
-      You can find a collection of compatible ROMs on
-      <a href="https://palmdb.net/app/palm-roms-complete" target="_blank" rel="external">PalmDB</a>.
+      No card images. Select the &bdquo;+&ldquo; icon in the upper right corner in order to create a
+      new image, or select the upload icon to import an existing on.
     </div>
   </div>
 
