--- a/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
@@ -11,6 +11,10 @@
     <ion-label>Reset</ion-label>
     <ion-icon name="refresh-outline" slot="end"></ion-icon>
   </ion-item>
+  <ion-item button *ngIf="supportsStorageCard" [detail]="false" (click)="insertCard()">
+    <ion-label>Insert {{hasMemorystick ? 'stick' : 'SD card'}}</ion-label>
+    <ion-icon name="log-in-outline" slot="end"></ion-icon>
+  </ion-item>
   <ion-item button [detail]="false" *ngIf="isMuted && !isAudioOff" (click)="mute(false)">
     <ion-label>Enable audio</ion-label>
     <ion-icon name="volume-high-outline"></ion-icon>
