UI rework, support saving cards.

--- a/web/pwa/src/app/page/settings/settings.page.html
+++ b/web/pwa/src/app/page/settings/settings.page.html
@@ -75,7 +75,7 @@
       </ion-item>
 
       <ion-item lines="none">
-        <ion-label>Remote installation sources</ion-label>
+        <ion-label>Open from remote sources</ion-label>
         <ion-toggle formControlName="enableRemoteInstall"></ion-toggle>
       </ion-item>
 
