--- a/web/pwa/src/app/page/storage/edit-card-dialog/edit-card-dialog.component.html
+++ b/web/pwa/src/app/page/storage/edit-card-dialog/edit-card-dialog.component.html
@@ -1,6 +1,6 @@
 <ion-header translucent>
   <ion-toolbar>
-      <ion-title>{{newCard ? 'New storage card' : 'Edit storage card'}}</ion-title>
+      <ion-title>{{newCard ? 'New memory card' : 'Edit memory card'}}</ion-title>
 
       <ion-buttons slot="primary">
           <ion-button (click)="save()" [disabled]="formGroup.invalid">Save</ion-button>
