--- a/web/pwa/src/app/page/storage/new-card-dialog/new-card-dialog.component.html
+++ b/web/pwa/src/app/page/storage/new-card-dialog/new-card-dialog.component.html
@@ -1,6 +1,6 @@
 <ion-header translucent>
   <ion-toolbar>
-      <ion-title>New storage card</ion-title>
+      <ion-title>New memory card</ion-title>
 
       <ion-buttons slot="primary">
           <ion-button (click)="create()" [disabled]="formGroup.invalid">Create</ion-button>
