--- a/web/pwa/src/app/tabs/tabs.page.html
+++ b/web/pwa/src/app/tabs/tabs.page.html
@@ -15,7 +15,7 @@
 
       <ion-tab-button tab="storage">
         <ion-icon name="folder-outline"></ion-icon>
-        <ion-label>Storage</ion-label>
+        <ion-label>Cards</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="settings">
