--- a/web/pwa/src/app/page/storage/storage-card/storage-card.component.html
+++ b/web/pwa/src/app/page/storage/storage-card/storage-card.component.html
@@ -4,13 +4,17 @@
       <ion-icon name="create-outline"></ion-icon>
     </ion-item-option>
 
-    <ion-item-option [disabled]="isAttached" color="secondary" icon-only (click)="slidingItem.close(); check.emit(card)">
-      <ion-icon name="medkit-outline"></ion-icon>
+    <ion-item-option color="secondary" icon-only (click)="slidingItem.close(); save.emit(card)">
+      <ion-icon name="share-outline"></ion-icon>
     </ion-item-option>
 
   </ion-item-options>
 
   <ion-item-options side="end">
+    <ion-item-option [disabled]="isAttached" color="secondary" icon-only (click)="slidingItem.close(); check.emit(card)">
+      <ion-icon name="medkit-outline"></ion-icon>
+    </ion-item-option>
+
     <ion-item-option [disabled]="!isAttached" color="tertiary" icon-only (click)="slidingItem.close(); eject.emit(card)">
       <ion-icon name="log-out-outline"></ion-icon>
     </ion-item-option>
