--- a/web/pwa/src/app/page/storage/storage.page.html
+++ b/web/pwa/src/app/page/storage/storage.page.html
@@ -1,15 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Storage</ion-title>
+    <ion-title>Memory cards</ion-title>
 
     <ion-buttons slot="primary">
-      <ion-button (click)="createNewCardImage()">
+      <ion-button (click)="addCardImage()">
         <ion-icon name="add-outline"></ion-icon>
       </ion-button>
 
-      <ion-button (click)="importCardImage()">
-        <ion-icon name="download-outline"></ion-icon>
-      </ion-button>
     </ion-buttons>
 
     <ion-buttons slot="secondary">
@@ -25,7 +22,7 @@
 <ion-content>
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Storage cards</ion-title>
+      <ion-title size="large">Memory cards</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -35,15 +32,15 @@
 
   <div *ngIf="!storageCardService.isLoading() && cards.length === 0" class="placeholder-container">
     <div class="placeholder">
-      No card images. Select the &bdquo;+&ldquo; icon in the upper right corner in order to create a
-      new image, or select the upload icon to import an existing on.
+      No memory cards. Select the &bdquo;+&ldquo; icon in the upper right corner in order to create a
+      new card.
     </div>
   </div>
 
   <ion-list *ngIf="!storageCardService.isLoading() && cards.length > 0">
     <app-storage-card *ngFor="let card of cards;trackBy:trackCardBy" [card]="card"
       (delete)="deleteCard(card)" (select)="selectCard(card)" (edit)="editCard(card)"
-      (check)="checkCard(card)" (eject)="ejectCard(card)" (interaction)="lastCardTouched = card.id"
+      (check)="checkCard(card)" (eject)="ejectCard(card)" (interaction)="lastCardTouched = card.id" (save)="saveCard(card)"
       [touched]="card.id === lastCardTouched">
     </app-storage-card>
   </ion-list>
