--- a/web/pwa/src/app/page/storage/context-menu/context-menu.component.html
+++ b/web/pwa/src/app/page/storage/context-menu/context-menu.component.html
@@ -2,14 +2,11 @@
   <ion-item button [detail]="false" (click)="onEdit()">
     Edit
   </ion-item>
-  <ion-item button [detail]="false" (click)="onEdit()">
+  <ion-item button [detail]="false" (click)="onSave()">
     Save
   </ion-item>
-  <ion-item button [disabled]="isAttached" [detail]="false" (click)="onSave()">
+  <ion-item button [disabled]="isAttached" [detail]="false" (click)="onCheck()">
     Check
-  </ion-item>
-  <ion-item button [disabled]="!isAttached" [detail]="false" (click)="onEject()">
-    Eject
   </ion-item>
   <ion-item button [detail]="false" (click)="onDelete()">
     Delete
