Save / restore attached card.

--- a/web/pwa/src/app/page/storage/context-menu/context-menu.component.html
+++ b/web/pwa/src/app/page/storage/context-menu/context-menu.component.html
@@ -3,9 +3,9 @@
     Edit
   </ion-item>
   <ion-item button [detail]="false" (click)="onSave()">
-    Save
+    Export
   </ion-item>
-  <ion-item button [disabled]="isAttached" [detail]="false" (click)="onCheck()">
+  <ion-item button [detail]="false" (click)="onCheck()">
     Check
   </ion-item>
   <ion-item button [detail]="false" (click)="onDelete()">
