--- a/web/pwa/src/app/page/storage/storage-card/storage-card.component.html
+++ b/web/pwa/src/app/page/storage/storage-card/storage-card.component.html
@@ -11,7 +11,7 @@
   </ion-item-options>
 
   <ion-item-options side="end">
-    <ion-item-option [disabled]="isAttached" color="tertiary" icon-only (click)="slidingItem.close(); check.emit(card)">
+    <ion-item-option color="tertiary" icon-only (click)="slidingItem.close(); check.emit(card)">
       <ion-icon name="medkit-outline"></ion-icon>
     </ion-item-option>
 
