Misc UI tuning.

--- a/web/pwa/src/app/page/storage/context-menu/context-menu.component.html
+++ b/web/pwa/src/app/page/storage/context-menu/context-menu.component.html
@@ -3,7 +3,7 @@
     Edit
   </ion-item>
   <ion-item button [detail]="false" (click)="onSave()">
-    Export
+    Save
   </ion-item>
   <ion-item button [detail]="false" (click)="onCheck()">
     Check
