Fix refactoring fallout.

--- a/web/pwa/src/app/page/storage/storage-card/storage-card.component.html
+++ b/web/pwa/src/app/page/storage/storage-card/storage-card.component.html
@@ -21,7 +21,7 @@
 
   </ion-item-options>
 
-  <ion-item [color]="color" (click)="select.emit(); interaction.emit()">
+  <ion-item [color]="color" (click)="selectCard.emit(); interaction.emit()">
     <ion-label>
       <h2>{{card?.name}}</h2>
       <p>{{card?.size | cardSize}}, {{status}}</p>
