Subnavigation for mounting.

--- a/web/pwa/src/app/page/storage/storage.page.html
+++ b/web/pwa/src/app/page/storage/storage.page.html
@@ -1,47 +1,1 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Memory cards</ion-title>
-
-    <ion-buttons slot="primary">
-      <ion-button (click)="addCardImage()">
-        <ion-icon name="add-outline"></ion-icon>
-      </ion-button>
-
-    </ion-buttons>
-
-    <ion-buttons slot="secondary">
-      <ion-button (click)="showHelp()">
-        <ion-icon name="help-outline"></ion-icon>
-      </ion-button>
-
-      <app-pwa-prompt></app-pwa-prompt>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Memory cards</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div class="loader" *ngIf="storageCardService.isLoading()">
-    <ion-spinner></ion-spinner>
-  </div>
-
-  <div *ngIf="!storageCardService.isLoading() && cards.length === 0" class="placeholder-container">
-    <div class="placeholder">
-      No memory cards. Select the &bdquo;+&ldquo; icon in the upper right corner in order to create a
-      new card.
-    </div>
-  </div>
-
-  <ion-list *ngIf="!storageCardService.isLoading() && cards.length > 0">
-    <app-storage-card *ngFor="let card of cards;trackBy:trackCardBy" [card]="card"
-      (delete)="deleteCard(card)" (selectCard)="selectCard(card)" (edit)="editCard(card)"
-      (check)="checkCard(card)" (interaction)="lastCardTouched = card.id" (save)="saveCard(card)"
-      [touched]="card.id === lastCardTouched">
-    </app-storage-card>
-  </ion-list>
-</ion-content>
+<ion-nav #nav [animated]="true" [root]="navRoot" [rootParams]="navRootProps"></ion-nav>
