--- a/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.html
+++ b/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{ card?.name ?? ''}}</ion-title>
+    <ion-title>{{title}}</ion-title>
 
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
@@ -15,5 +15,15 @@
 </ion-header>
 
 <ion-content>
+  <div *ngIf="entries !== undefined && entries.length === 0" class="placeholder-container">
+    <div class="placeholder">
+      empty directory
+    </div>
+  </div>
 
+  <ion-list *ngIf="entries !== undefined">
+    <app-file-entry *ngFor="let entry of entries;trackBy:trackEntryBy" [entry]="entry" (selectEntry)="onSelect(entry)"
+      (interaction)="lastEntryTouched = entry.name" [touched]="entry.name === lastEntryTouched">
+    </app-file-entry>
+  </ion-list>
 </ion-content>
