Refactoring, polish, allow to force-eject cards from storage tab.

--- a/web/pwa/src/app/page/storage/file-entry/file-entry.component.html
+++ b/web/pwa/src/app/page/storage/file-entry/file-entry.component.html
@@ -11,7 +11,7 @@
     </ion-item-options>
 
     <ion-item-options side="end">
-        <ion-item-option color="tertiary" icon-only (click)="slidingItem.close(); check.emit(entry)">
+        <ion-item-option color="tertiary" icon-only (click)="slidingItem.close(); copyEntry.emit(entry)">
             <ion-icon name="copy-outline"></ion-icon>
         </ion-item-option>
 
