Styling, breadcrumb navigation for folders.

--- a/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.html
+++ b/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{title}}</ion-title>
+    <ion-title [id]="breadcrumbTriggerId" (click)="openBreadcrumbMenu($event)">{{title}}<div class="select-arrow" *ngIf="showBreadcrumb"></div></ion-title>
 
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
