--- a/web/pwa/src/app/page/storage/context-menu-card/context-menu-card.component.html
+++ b/web/pwa/src/app/page/storage/context-menu-card/context-menu-card.component.html
@@ -1,14 +1,14 @@
 <ion-list>
-  <ion-item button [detail]="false" (click)="onEdit()">
+  <ion-item [color]="color" button [detail]="false" (click)="onEdit()">
     Edit
   </ion-item>
-  <ion-item button [detail]="false" (click)="onSave()">
+  <ion-item [color]="color" button [detail]="false" (click)="onSave()">
     Save
   </ion-item>
-  <ion-item button [detail]="false" (click)="onCheck()">
+  <ion-item [color]="color" button [detail]="false" (click)="onCheck()">
     Check
   </ion-item>
-  <ion-item button [detail]="false" (click)="onDelete()">
+  <ion-item [color]="color" button [detail]="false" (click)="onDelete()" lines="none">
     Delete
   </ion-item>
 </ion-list>
