--- a/web/pwa/src/app/page/storage/context-menu-breadcrumb/context-menu-breadcrumb.component.html
+++ b/web/pwa/src/app/page/storage/context-menu-breadcrumb/context-menu-breadcrumb.component.html
@@ -1,5 +1,5 @@
 <ion-list *ngIf="entries">
-    <ion-item  [color]="color" button [detail]="false" *ngFor="let entry of entries; index as i" (click)="onSelect(i)" [lines]="(i === entries.length - 1) ? 'none' : 'full'">
+    <ion-item  button [detail]="false" *ngFor="let entry of entries; index as i" (click)="onSelect(i)" [lines]="(i === entries.length - 1) ? 'none' : 'full'">
         <ng-container [ngSwitch]="entries.length">
             <ion-icon name="list-outline" slot="end" *ngSwitchCase="i + 1"></ion-icon>
             <ion-icon name="file-tray-outline" slot="end" *ngSwitchCase="i + 2"></ion-icon>
