--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -38,6 +38,7 @@
     border: none !important;
 }
 
+
 ion-label h4, p {
     margin-top: 0.75em;
 }
@@ -74,6 +75,18 @@ ion-modal {
     }
 }
 
-.ios ion-popover.popover-border {
+.ios ion-popover {
     --box-shadow: 0 0 0 1px var(--ion-background-color, white);
+}
+
+.ios ion-popover ion-item {
+    --border-color: var(--ion-color-light-shade);
+    --background: var(--ion-color-light);
+
+    @media (prefers-color-scheme: dark) {
+        & {
+            --border-color: var(--ion-color-light-tint);
+        }
+    }
+
 }
