--- a/web/pwa/src/app/page/storage/file-entry/file-entry.component.html
+++ b/web/pwa/src/app/page/storage/file-entry/file-entry.component.html
@@ -1,21 +1,21 @@
 <ion-item-sliding #slidingItem (contextmenu)="onContextmenu($event)" (ionDrag)="interaction.emit(entry)">
     <ion-item-options side="start">
-        <ion-item-option color="primary" icon-only (click)="slidingItem.close(); edit.emit(entry)">
+        <ion-item-option color="primary" icon-only (click)="slidingItem.close(); editEntry.emit(entry)">
             <ion-icon name="create-outline"></ion-icon>
         </ion-item-option>
 
-        <ion-item-option color="secondary" icon-only (click)="slidingItem.close(); save.emit(entry)">
+        <ion-item-option color="secondary" icon-only (click)="slidingItem.close(); saveEntry.emit(entry)">
             <ion-icon name="share-outline"></ion-icon>
         </ion-item-option>
 
     </ion-item-options>
 
     <ion-item-options side="end">
-        <ion-item-option color="tertiary" icon-only (click)="slidingItem.close(); copyEntry.emit(entry)">
+        <ion-item-option color="tertiary" icon-only (click)="slidingItem.close(); cutOrCopyEntry()">
             <ion-icon name="copy-outline"></ion-icon>
         </ion-item-option>
 
-        <ion-item-option color="danger" icon-only (click)="slidingItem.close(); delete.emit(entry)">
+        <ion-item-option color="danger" icon-only (click)="slidingItem.close(); deleteEntry.emit(entry)">
             <ion-icon name="trash-outline"></ion-icon>
         </ion-item-option>
 
