--- a/web/pwa/src/app/page/storage/context-menu-card/context-menu-card.component.html
+++ b/web/pwa/src/app/page/storage/context-menu-card/context-menu-card.component.html
@@ -11,7 +11,7 @@
   <ion-icon name="medkit-outline" slot="end"></ion-icon>
     Check
   </ion-item>
-  <ion-item lines="none" button [detail]="false" (click)="onDelete()" lines="none">
+  <ion-item lines="none" button [detail]="false" (click)="onDelete()">
   <ion-icon name="trash-outline" slot="end"></ion-icon>
     Delete
   </ion-item>
