--- a/web/pwa/src/app/page/storage/context-menu-file-entry/context-menu-file-entry.component.html
+++ b/web/pwa/src/app/page/storage/context-menu-file-entry/context-menu-file-entry.component.html
@@ -15,7 +15,7 @@
         <ion-icon name="cut-outline" slot="end"></ion-icon>
         Cut
     </ion-item>
-    <ion-item lines="none" button [detail]="false" (click)="onDelete()" lines="none">
+    <ion-item lines="none" button [detail]="false" (click)="onDelete()">
         <ion-icon name="trash-outline" slot="end"></ion-icon>
         Delete
     </ion-item>
