--- a/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.html
+++ b/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.html
@@ -8,8 +8,8 @@
     </ion-buttons>
 
     <ion-buttons slot="primary">
-      <ion-button (click)="showHelp()">
-        <ion-icon name="help-outline"></ion-icon>
+      <ion-button (click)="openContextMenu($event)">
+        <ion-icon name="ellipsis-vertical-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
