--- a/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
@@ -39,7 +39,7 @@
     <ion-label>Settings</ion-label>
     <ion-icon name="cog-outline" slot="end"></ion-icon>
   </ion-item>
-  <ion-item lines="none" button [detail]="false" (click)="help()" lines="none">
+  <ion-item lines="none" button [detail]="false" (click)="help()">
     <ion-label>Help</ion-label>
     <ion-icon name="help-outline" slot="end"></ion-icon>
   </ion-item>
